gcc/testsuite/gcc.dg/debug/const-2.c
@@ -1,0 +1,2 @@
+/* { dg-do compile } */
+static __complex__ int x = 3.0;
